--- a/home.html
+++ b/home.html
@@ -7,20 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-
-
-
-
-
-<!-- ------This is an unfinished project by me (Arif-2212045). I'm still working on it. I will try to update everyday in github------- -->
-
-
-
-
-
-
-
-
+<!-- ------This is an unfinished project by me (Arif-2212045). I'm still working on it. I will try to update every day in GitHub------- -->
 <body>
     <div id="header">
         <div class="con1">
