Updated 18-08-2023 home.html

--- a/home.html
+++ b/home.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARIF'S PORTFOLIO WEBSITE</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/304dee5701.js" crossorigin="anonymous"></script>
 </head>
 
+
 <!-- ------This is an unfinished project by me (Arif-2212045). I'm still working on it. I will try to update every day in GitHub------- -->
+
+
 <body>
     <div id="header">
         <div class="con1">
@@ -46,7 +50,7 @@
                         <ul>
                             <li><span>Front-End</span><br>Desinging website interfaces</li>
                             <li><span>Back-End</span><br>Learning Back-End Development</li>
-                            <li><span>Api</span><br>Learning Api intregretion</li>
+                            <li><span>Api</span><br>Learning Api</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -65,6 +69,33 @@
         </div>
     </div>
 
+<!-- -----------services--------------- -->
+<!-- -----Actually I don't provide any service till now. So this part is just a example and not connected to me----- -->
+<div id="services">
+    <div class="con1">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <i class="fa-solid fa-code"></i>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores culpa consequuntur. Labore doloribus quis obcaecati! Ut ad, maxime molestiae earum soluta deserunt ex veniam cum. Dicta veritatis natus exercitationem.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-object-group"></i>
+                <h2>UI/UX Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores culpa consequuntur. Labore doloribus quis obcaecati! Ut ad, maxime molestiae earum soluta deserunt ex veniam cum. Dicta veritatis natus exercitationem.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-gamepad"></i>
+                <h2>Game Development</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores culpa consequuntur. Labore doloribus quis obcaecati! Ut ad, maxime molestiae earum soluta deserunt ex veniam cum. Dicta veritatis natus exercitationem.</p>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
